k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamlit-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: streamlit-app
  template:
    metadata:
      labels:
        app: streamlit-app
    spec:
      containers:
      - name: streamlit-app
        image: 137068254659.dkr.ecr.us-east-1.amazonaws.com/streamlit-app:latest
        ports:
        - containerPort: 8501
