k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pdf-app-service
spec:
  type: ClusterIP
  selector:
    app: pdf-app
  ports:
  - protocol: TCP
    port: 8501
    targetPort: 8501
